// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination 1`] = `
<div
  class="Paginationstyles__Box-sc-7a3gdv-0 kCPgsd"
>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 bVOtWq"
    disabled=""
    tabindex="-1"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M9.56 11.854l7.294 7.293-1.415 1.414-8-8a1 1 0 010-1.415l8-8 1.415 1.415-7.293 7.293z"
      />
    </svg>
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 hDiJml"
    tabindex="1"
  >
    1
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    2
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    3
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    4
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
      />
    </svg>
  </button>
</div>
`;

exports[`Pagination w/ currentPageNeighboursCount 1`] = `
<div
  class="Paginationstyles__Box-sc-7a3gdv-0 kCPgsd"
>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 bVOtWq"
    disabled=""
    tabindex="-1"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M9.56 11.854l7.294 7.293-1.415 1.414-8-8a1 1 0 010-1.415l8-8 1.415 1.415-7.293 7.293z"
      />
    </svg>
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 hDiJml"
    tabindex="1"
  >
    1
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    2
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    3
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    4
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
      />
    </svg>
  </button>
</div>
`;

exports[`Pagination w/ initialPageIndex 1`] = `
<div
  class="Paginationstyles__Box-sc-7a3gdv-0 kCPgsd"
>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M9.56 11.854l7.294 7.293-1.415 1.414-8-8a1 1 0 010-1.415l8-8 1.415 1.415-7.293 7.293z"
      />
    </svg>
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    1
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    2
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    3
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 hDiJml"
    tabindex="1"
  >
    4
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 bVOtWq"
    disabled=""
    tabindex="-1"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
      />
    </svg>
  </button>
</div>
`;

exports[`Pagination w/ onChange (first and prev) 1`] = `
<Paginationstyles__Box>
  <Pager
    active={false}
    disabled={true}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoLeft
      color="currentColor"
      size="m"
    />
  </Pager>
  <Pager
    active={true}
    key="0"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    1
  </Pager>
  <Pager
    active={false}
    key="1"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    2
  </Pager>
  <Pager
    active={false}
    key="2"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    3
  </Pager>
  <Pager
    active={false}
    key="3"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    4
  </Pager>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoRight
      color="currentColor"
      size="m"
    />
  </Pager>
</Paginationstyles__Box>
`;

exports[`Pagination w/ onChange (first and prev) 2`] = `
<Paginationstyles__Box>
  <Pager
    active={false}
    disabled={true}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoLeft
      color="currentColor"
      size="m"
    />
  </Pager>
  <Pager
    active={true}
    key="0"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    1
  </Pager>
  <Pager
    active={false}
    key="1"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    2
  </Pager>
  <Pager
    active={false}
    key="2"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    3
  </Pager>
  <Pager
    active={false}
    key="3"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    4
  </Pager>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoRight
      color="currentColor"
      size="m"
    />
  </Pager>
</Paginationstyles__Box>
`;

exports[`Pagination w/ onChange (last and next) 1`] = `
<Paginationstyles__Box>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoLeft
      color="currentColor"
      size="m"
    />
  </Pager>
  <Pager
    active={false}
    key="0"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    1
  </Pager>
  <Pager
    active={false}
    key="1"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    2
  </Pager>
  <Pager
    active={false}
    key="2"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    3
  </Pager>
  <Pager
    active={true}
    key="3"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    4
  </Pager>
  <Pager
    active={false}
    disabled={true}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoRight
      color="currentColor"
      size="m"
    />
  </Pager>
</Paginationstyles__Box>
`;

exports[`Pagination w/ onChange (last and next) 2`] = `
<Paginationstyles__Box>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoLeft
      color="currentColor"
      size="m"
    />
  </Pager>
  <Pager
    active={false}
    key="0"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    1
  </Pager>
  <Pager
    active={false}
    key="1"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    2
  </Pager>
  <Pager
    active={false}
    key="2"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    3
  </Pager>
  <Pager
    active={true}
    key="3"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    4
  </Pager>
  <Pager
    active={false}
    disabled={true}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoRight
      color="currentColor"
      size="m"
    />
  </Pager>
</Paginationstyles__Box>
`;

exports[`Pagination w/ onChange (next) 1`] = `
<Paginationstyles__Box>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoLeft
      color="currentColor"
      size="m"
    />
  </Pager>
  <Pager
    active={false}
    key="0"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    1
  </Pager>
  <Pager
    active={true}
    key="1"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    2
  </Pager>
  <Pager
    active={false}
    key="2"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    3
  </Pager>
  <Pager
    active={false}
    key="3"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    4
  </Pager>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoRight
      color="currentColor"
      size="m"
    />
  </Pager>
</Paginationstyles__Box>
`;

exports[`Pagination w/ onChange (next) 2`] = `
<Paginationstyles__Box>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoLeft
      color="currentColor"
      size="m"
    />
  </Pager>
  <Pager
    active={false}
    key="0"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    1
  </Pager>
  <Pager
    active={true}
    key="1"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    2
  </Pager>
  <Pager
    active={false}
    key="2"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    3
  </Pager>
  <Pager
    active={false}
    key="3"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    4
  </Pager>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoRight
      color="currentColor"
      size="m"
    />
  </Pager>
</Paginationstyles__Box>
`;

exports[`Pagination w/ onChange (prev) 1`] = `
<Paginationstyles__Box>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoLeft
      color="currentColor"
      size="m"
    />
  </Pager>
  <Pager
    active={false}
    key="0"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    1
  </Pager>
  <Pager
    active={false}
    key="1"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    2
  </Pager>
  <Pager
    active={true}
    key="2"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    3
  </Pager>
  <Pager
    active={false}
    key="3"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    4
  </Pager>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoRight
      color="currentColor"
      size="m"
    />
  </Pager>
</Paginationstyles__Box>
`;

exports[`Pagination w/ onChange (prev) 2`] = `
<Paginationstyles__Box>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoLeft
      color="currentColor"
      size="m"
    />
  </Pager>
  <Pager
    active={false}
    key="0"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    1
  </Pager>
  <Pager
    active={false}
    key="1"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    2
  </Pager>
  <Pager
    active={true}
    key="2"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    3
  </Pager>
  <Pager
    active={false}
    key="3"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    4
  </Pager>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoRight
      color="currentColor"
      size="m"
    />
  </Pager>
</Paginationstyles__Box>
`;

exports[`Pagination w/ onChange (target) 1`] = `
<Paginationstyles__Box>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoLeft
      color="currentColor"
      size="m"
    />
  </Pager>
  <Pager
    active={false}
    key="0"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    1
  </Pager>
  <Pager
    active={true}
    key="1"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    2
  </Pager>
  <Pager
    active={false}
    key="2"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    3
  </Pager>
  <Pager
    active={false}
    key="3"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    4
  </Pager>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoRight
      color="currentColor"
      size="m"
    />
  </Pager>
</Paginationstyles__Box>
`;

exports[`Pagination w/ onChange (target) 2`] = `
<Paginationstyles__Box>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoLeft
      color="currentColor"
      size="m"
    />
  </Pager>
  <Pager
    active={false}
    key="0"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    1
  </Pager>
  <Pager
    active={true}
    key="1"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    2
  </Pager>
  <Pager
    active={false}
    key="2"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    3
  </Pager>
  <Pager
    active={false}
    key="3"
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    4
  </Pager>
  <Pager
    active={false}
    disabled={false}
    onClick={[Function]}
    size="m"
    tabIndex={1}
  >
    <GoRight
      color="currentColor"
      size="m"
    />
  </Pager>
</Paginationstyles__Box>
`;

exports[`Pagination w/ size 1`] = `
<div
  class="Paginationstyles__Box-sc-7a3gdv-0 kCPgsd"
>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 gXWkbU"
    disabled=""
    tabindex="-1"
  >
    <svg
      fill="currentColor"
      height="16"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M9.56 11.854l7.294 7.293-1.415 1.414-8-8a1 1 0 010-1.415l8-8 1.415 1.415-7.293 7.293z"
      />
    </svg>
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 qgcsH"
    tabindex="1"
  >
    1
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 csdZFe"
    tabindex="1"
  >
    2
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 csdZFe"
    tabindex="1"
  >
    3
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 csdZFe"
    tabindex="1"
  >
    4
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 csdZFe"
    tabindex="1"
  >
    <svg
      fill="currentColor"
      height="16"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
      />
    </svg>
  </button>
</div>
`;

exports[`Pagination w/ size 2`] = `
<div
  class="Paginationstyles__Box-sc-7a3gdv-0 kCPgsd"
>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 bVOtWq"
    disabled=""
    tabindex="-1"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M9.56 11.854l7.294 7.293-1.415 1.414-8-8a1 1 0 010-1.415l8-8 1.415 1.415-7.293 7.293z"
      />
    </svg>
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 hDiJml"
    tabindex="1"
  >
    1
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    2
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    3
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    4
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 dWrcUk"
    tabindex="1"
  >
    <svg
      fill="currentColor"
      height="20"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
      />
    </svg>
  </button>
</div>
`;

exports[`Pagination w/ size 3`] = `
<div
  class="Paginationstyles__Box-sc-7a3gdv-0 kCPgsd"
>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 gaebIT"
    disabled=""
    tabindex="-1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M9.56 11.854l7.294 7.293-1.415 1.414-8-8a1 1 0 010-1.415l8-8 1.415 1.415-7.293 7.293z"
      />
    </svg>
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 kgWAfk"
    tabindex="1"
  >
    1
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 hDYgNB"
    tabindex="1"
  >
    2
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 hDYgNB"
    tabindex="1"
  >
    3
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 hDYgNB"
    tabindex="1"
  >
    4
  </button>
  <button
    class="Pagerstyles__Box-sc-1weko6t-0 hDYgNB"
    tabindex="1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M14.44 11.854l-7.294 7.293 1.415 1.414 8-8a1 1 0 000-1.415l-8-8-1.415 1.415 7.293 7.293z"
      />
    </svg>
  </button>
</div>
`;
